# info-digest

./: .gitignore  ANTI_DRIFT.md  BACKLOG.md  PROMPT.md  README.md  STATUS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  digest.yml  release.yml
config/: feeds.yaml  rater.yaml  settings.yaml
config/templates/: digest_section.j2  dingtalk_md.j2  feishu_card.j2
data/: infodigest.db-shm  infodigest.db-wal
docs/: CONTRIBUTING.md  DATA_MODEL.md  DESIGN.md  REQUIREMENTS.md  UAT.md
infodigest/: __init__.py  cli.py  config.py
infodigest/collector/: dedup.py  fetcher.py  normalizer.py  parser.py
infodigest/delivery/: base.py  dingtalk.py  failure.py  feishu.py  limiter.py
infodigest/formatter/: builder.py  translator.py
infodigest/rater/: scorer.py
infodigest/scheduler/: runner.py
infodigest/storage/: models.py  repo.py
scripts/: opml_import.py
tests/: conftest.py  test_cli.py  test_config.py  test_dedup.py  test_delivery.py  test_fetcher.py  test_formatter.py  test_normalizer.py  test_opml.py  test_parser.py  test_repo.py  test_runner.py  test_scorer.py  test_translator.py
tests/fixtures/: atom_sample.xml  bad_feed.xml  rss2_sample.xml
