[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "info-digest"
version = "0.1.0"
description = "RSS-based information aggregator with rule-based scoring and webhook delivery"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
info-digest = "infodigest.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["infodigest"]

[tool.coverage.report]
fail_under = 60

[tool.ruff]
target-version = "py311"
line-length = 120
